# cuUpscale

./: LICENSE  README.md
cpuUpscale-v1/: CMakeLists.txt
cpuUpscale-v1/src/: edi.cpp  lanczos.cpp  main.cpp  upscaler.cpp  upscaler.h
cuUpscale_v1_12.3/: CMakeLists.txt
cuUpscale_v1_12.3/src/: cuda_utils.cuh  edi.cu  edi.cuh  lanczos.cu  lanczos.cuh  main.cu
cuVidUpscale/src/: cuda_utils.cu  main.cpp  nvdec_wrapper.cpp  nvdec_wrappper.hpp  video_processor.cpp  video_processor.hpp
